ft. Api conectada com banco sqlite